# adobe-influencer-dashboard

./: .dockerignore  .env.example  .env.railway  .gitignore  COMPONENTS_STATUS.md  DEPLOY_GCP.md  DEPLOY_STREAMLIT_CLOUD.md  Dockerfile  Dockerfile.api  Dockerfile.railway  MEDIA_PIPELINE_GUIDE.md  README.md  check_data.py  cloudbuild.api.yaml  cloudbuild.dashboard.yaml  compare_creators.py  docker-compose.yml  download_social_videos.py  generate_docx.py  packages.txt  pyproject.toml  pytest.ini  railway.json  requirements.railway.txt  requirements.txt  run_workflow.py  serve_api.py  serve_dashboard.py  test_downloaders.py  test_media_direct.py  test_media_pipeline.py  test_youtube_api.py
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
apps/api/: main.py
apps/dashboard/: app.py  styles_main.css  styles_sidebar.css
configs/: app.yaml  gcp_api.env.example  gcp_dashboard.env.example  scoring_weights.yaml
data/apify_scraped data/creator_anikjaindesign/: instagram_api.json  instagram_comments.json  instagram_hashtags.json  instagram_posts.json  instagram_profile.json  instagram_profile_api.json  (+3 more)
data/imports/: anik jain2.csv  anikjain.csv  live_creator_seeds.json  saptarshi.csv  saptarshi2.csv  wanderwithsky.csv  wanderwithsky2.csv
data/sample/: analytics_import.csv  comments.json  content.json  creator_seeds.json  creators.json  transcripts.json
tests/: test_apify_adapter.py  test_deployment_config.py  test_nlp_pipeline.py  test_runner_and_api_integration.py  test_scoring.py  test_seed_intake.py  test_unified_live_adapter.py
(+66 files in other folders)
